--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://egoing.github.io/react-2022-tutorial-src/",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
